--- a/app/src/main/res/layout/activity_ficha.xml
+++ b/app/src/main/res/layout/activity_ficha.xml
@@ -12,46 +12,54 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="550dp"
-        android:layout_margin="15pt"
-        android:layout_marginBottom="10dp"
-        android:orientation="vertical"
-        android:padding="5pt">
+        android:layout_height="250dp"
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/txGato"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:layout_marginHorizontal="20pt"
-            android:layout_marginBottom="80dp"
+            android:layout_height="match_parent"
             android:contentDescription="@string/gato" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="50dp"
+        android:layout_marginHorizontal="30dp"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/txNombre"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
+            android:paddingTop="30dp"
             android:textAlignment="center"
-            android:textColor="#433E3E"
-            android:textSize="40sp"
+            android:textColor="@color/grisMasOscuro"
+            android:textSize="35sp"
             android:textStyle="bold" />
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp">
             <FrameLayout
                 android:id="@+id/contenedor_fragmento"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"></FrameLayout>
+                android:layout_height="match_parent">
+            </FrameLayout>
 
             <FrameLayout
                 android:id="@+id/contenedor_segundo_fragmento"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"></FrameLayout>
+                android:layout_height="match_parent">
+            </FrameLayout>
         </RelativeLayout>
 
-
     </LinearLayout>
+
+
+
+
 
 </LinearLayout>
